--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Welcome, {{ username }}!</h1>
     <a href="{{ url_for('customer_sale') }}">Sell Product</a>
+    <a href="{{ url_for('customer_gift_booking') }}">Gift Booking</a>
     <a href="{{ url_for('logout') }}">Logout</a>
 </body>
 </html>
