--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,7 @@
     <title>Dashboard</title>
 </head>
 <body>
-    <h1>Welcome, {{ username }}!</h1>
+    <h1>Welcome, customer!</h1>
     <a href="{{ url_for('customer_sale') }}">Sell Product</a>
     <a href="{{ url_for('customer_gift_booking') }}">Gift Booking</a>
     <a href="{{ url_for('logout') }}">Logout</a>
